[gd_scene load_steps=3 format=3 uid="uid://byov2w28tgqc0"]

[ext_resource type="Script" path="res://Ui/npc_window.gd" id="1_3vyxj"]

[sub_resource type="ButtonGroup" id="ButtonGroup_kci28"]
allow_unpress = true

[node name="NpcWindow" type="Control"]
layout_mode = 3
anchor_right = 0.208
anchor_bottom = 0.556
offset_right = 0.639984
offset_bottom = -0.480042
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3vyxj")

[node name="BackPanel" type="Panel" parent="."]
layout_mode = 0
offset_right = 400.0
offset_bottom = 600.0

[node name="DiaryButton" type="Button" parent="BackPanel"]
layout_mode = 0
anchor_left = 1.0
anchor_right = 1.0
offset_left = -90.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 50.0
toggle_mode = true
button_group = SubResource("ButtonGroup_kci28")
text = "Diary"

[node name="NamePlate" type="Label" parent="BackPanel"]
layout_mode = 0
anchor_right = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -100.0
offset_bottom = 50.0
text = "NPC Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="BackPanel"]
layout_mode = 0
anchor_right = 1.0
offset_left = 10.0
offset_top = 60.0
offset_right = -10.0
offset_bottom = 250.0

[node name="VBoxButtons" type="VBoxContainer" parent="BackPanel/ScrollContainer"]
custom_minimum_size = Vector2(380, 0)
layout_mode = 2

[node name="Duties" type="Button" parent="BackPanel/ScrollContainer/VBoxButtons"]
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_kci28")
text = "Duties"

[node name="DialogueButton" type="Button" parent="BackPanel/ScrollContainer/VBoxButtons"]
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_kci28")
text = "Dialogue"

[node name="MissionButton" type="Button" parent="BackPanel/ScrollContainer/VBoxButtons"]
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_kci28")
text = "Mission"

[node name="DialogueWindow" type="Control" parent="BackPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 10.0
offset_top = 180.0
offset_right = -10.0
offset_bottom = 590.0
grow_horizontal = 2

[node name="ChangeableWindow_DialogueWindow#ChatVBox" type="VBoxContainer" parent="BackPanel/DialogueWindow"]
custom_minimum_size = Vector2(380, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -190.0
offset_top = -33.0
offset_right = 190.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScrollContainer" type="ScrollContainer" parent="BackPanel/DialogueWindow/ChangeableWindow_DialogueWindow#ChatVBox"]
custom_minimum_size = Vector2(0, 360)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="BackPanel/DialogueWindow/ChangeableWindow_DialogueWindow#ChatVBox/ScrollContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="BackPanel/DialogueWindow/ChangeableWindow_DialogueWindow#ChatVBox/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(370, 360)
layout_mode = 2
vertical_alignment = 2
autowrap_mode = 3

[node name="ChatLineEdit" type="LineEdit" parent="BackPanel/DialogueWindow/ChangeableWindow_DialogueWindow#ChatVBox"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Type your message..."

[node name="SendButton" type="Button" parent="BackPanel/DialogueWindow/ChangeableWindow_DialogueWindow#ChatVBox"]
layout_mode = 2
text = "Send"

[node name="DutiesWindow" type="Control" parent="BackPanel"]
visible = false
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 10.0
offset_top = 180.0
offset_right = -10.0
offset_bottom = 590.0
grow_horizontal = 2

[node name="MissionWindow" type="Control" parent="BackPanel"]
visible = false
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 10.0
offset_top = 180.0
offset_right = -10.0
offset_bottom = 590.0
grow_horizontal = 2

[node name="DiaryWindow" type="Control" parent="BackPanel"]
visible = false
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 10.0
offset_top = 180.0
offset_right = -10.0
offset_bottom = 590.0
grow_horizontal = 2

[connection signal="text_submitted" from="BackPanel/DialogueWindow/ChangeableWindow_DialogueWindow#ChatVBox/ChatLineEdit" to="." method="_on_chat_line_edit_text_submitted"]
